src/Pages/login/Login.module.css
:root{
    --text-color:white;
    --text-color1:black;
    --btn-color:#00BCD4;
    --bg-color:#02072D;
    --bg-color1:#A6192E;
    --bg-red1:#A6192E;
    --bg-red2:#910F25;
    --bg-red3:#770B1C;
    --bg-color2:#000434;
    --bg-color3:whitesmoke;
    --bg-azulteste:rgb(39, 22, 101);
    --bg-menu:#00013C;
    --bg-body:#1E1E1E;
  }

.main{
    height: 100vh;
    width: 100%;
}
.header{
    height: 5em;
    width: 100%;
    background-color: var(--bg-red2);
    display: flex;
    align-items: center;
    justify-content: space-between;
    padding: 0 9%;
}

#title{
    font-family: 'MentecFont';
    font-size: 2.2em;
    color: white;
    font-weight: 200;
    text-decoration: none;
}
#cadBtn{
    outline: 0;
    border: 0;
    height: 40px;
    width: 250px;
    border-radius: 5px;
    cursor: pointer;
    background-color: rgb(187, 74, 89);
    color: white;
    text-decoration: none;
    padding: 10px 30px;
    font-size: 0.9em;
}
.formAndArt{
    height: calc(100vh - 5em);
    display: flex;
    justify-content: center;
    align-items: center;
}
.formBox{
    height: 100%;
    width: 50%;

    display: flex;
    align-items: center;
    justify-content: center;
}
.formLogin{
    height: 95%;
    width: 65%;
    background-color: var(--bg-red2);
    border-radius: 16px;
    display: flex;
    flex-direction: column;
    justify-content: space-evenly;
    color: white;
}
.formLogin p:nth-child(1){
    font-size: 18pt;
    font-weight: 100;
    color: white;
}
.formLogin p:nth-child(2){
    margin-left: -15%;
}
#textForgotPass{
    margin-left: 40%;
    margin-top: -5%;
    font-size: 1em;
    color: white;
    font-weight: 200;
}
.inpt{
    display: block;
    border-top: 0;
    border-left: 0;
    border-right: 0;
    border-bottom: 1px solid white;
    background-color: transparent;
    outline: 0;
    padding: 0 10px;
    height: 30px;
    width: 75%;
    
}
.inpt::placeholder{
    color: white;
}

#formRow{
    display: flex;
    flex-direction: row;
    width: 75%;
    justify-content: space-between;
    align-items: center;
    color: white;
}
#formRow p{
    font-size: 10pt;
}
#btnLogin{
    height: 50px;
    width: 130px;
    background-color: #a73142;
    border: 0;
    outline: 0;
    color: white;
    border-radius: 5px;
    cursor: pointer;
    transition: 0.5s;
}
#btnLogin:hover{
    background-color: rgb(202, 47, 70);
}
.artBox{
    width: 50%;
    height: 100%;

    display: flex;
    align-items: center;
    justify-content: center;
    flex-direction: column;
}
#artImg{
    height: 65%;
    width: 55%;
}
#check{
    cursor: pointer;
}
#btnMs{
    width: 75%;
    height: 50px;
    background-color: white;
    border: 0;
    outline: 0;
    display: flex;
    align-items: center;
    justify-content: space-evenly;
    transition: 0.5s;
    cursor: pointer;

}
#btnMs:hover{
    background-color: #6b97c9;
    color: white;
}

#text{
 
    height: 40%;
    width: 100%;
    display: flex;
    
    justify-content: center;

}
#text h3{
    font-size: 1.5em;
    width: 50%;
}
#text span{
    color: #A6192E;
}


 
/* responsivo */

@media(max-width:768px){
    .artBox{
        display: none;
    }
    .formBox{
        width: 100%;
    }
    #cadBtn{
        width: 150px;
    }
    .formLogin{
        width: 75%;
    }
}

